# podmortem

./: .dockerignore  .gitignore  Dockerfile  README.md  details.txt  pyproject.toml  requirements.txt
charts/podmortem/: Chart.yaml  values.yaml
charts/podmortem/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  pvc.yaml  serviceaccount.yaml
src/podmortem/: __init__.py  cli.py  storage.py  watcher.py
