[project]
name = "podmortem"
version = "0.1.0"
description = "Pod Restart Root Cause Logger - watches for pod restarts and persists the reason, logs, and events"
requires-python = ">=3.10"
dependencies = [
    "kubernetes>=28.1.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
podmortem = "podmortem.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
